--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "next-base-tw",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tinymce/tinymce-react": "^4.3.2",
-    "cookies-next": "^4.1.0",
-    "gsap": "^3.12.5",
-    "next": "14.0.4",
-    "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.10",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.365.0",
+    "mongoose": "^8.3.0",
+    "next": "14.1.4",
+    "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-modal": "^3.16.1",
-    "swiper": "^11.0.5"
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
